--- a/expertise.html
+++ b/expertise.html
@@ -181,53 +181,109 @@
         </div>
     </div>
     <!-- End Breadcrumb -->
+    <style>
+        .experience-body .card {
+            display: flex; /* Change from inline-block to flex */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            height: 130px;
+            width: 130px;
+            color: var(--white);
+            background: var(--color-primary);
+            font-size: 50px;
+            margin-bottom: 70px;
+            position: relative;
+            clip-path: polygon(45% 1.33975%, 46.5798% 0.60307%, 48.26352% 0.15192%, 50% 0%, 51.73648% 0.15192%, 53.4202% 0.60307%, 55% 1.33975%, 89.64102% 21.33975%, 91.06889% 22.33956%, 92.30146% 23.57212%, 93.30127% 25%, 94.03794% 26.5798%, 94.48909% 28.26352%, 94.64102% 30%, 94.64102% 70%, 94.48909% 71.73648%, 94.03794% 73.4202%, 93.30127% 75%, 92.30146% 76.42788%, 91.06889% 77.66044%, 89.64102% 78.66025%, 55% 98.66025%, 53.4202% 99.39693%, 51.73648% 99.84808%, 50% 100%, 48.26352% 99.84808%, 46.5798% 99.39693%, 45% 98.66025%, 10.35898% 78.66025%, 8.93111% 77.66044%, 7.69854% 76.42788%, 6.69873% 75%, 5.96206% 73.4202%, 5.51091% 71.73648%, 5.35898% 70%, 5.35898% 30%, 5.51091% 28.26352%, 5.96206% 26.5798%, 6.69873% 25%, 7.69854% 23.57212%, 8.93111% 22.33956%, 10.35898% 21.33975%);
+        }
+           .experience-body .card-container {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                gap: 20px;
+                padding: 20px;
+                max-width: 1200px;
+                margin-bottom:40px;
+            }
+
+
+            .experience-body .card:hover {
+                transform: translateY(-5px);
+            }
+            .experience-body .card i{
+                font-size: 50px;
+                margin-bottom: 10px;
+            }
+            .experience-body .experience-body .title{
+                text-align: center;
+                margin-top: 20px;
+            }
+            /* Responsive adjustments - keep the same height */
+            @media (max-width: 1024px) {
+                .experience-body .card {
+                    flex: 1 1 calc(25% - 20px); /* 4 cards on medium screens */
+                }
+            }
+
+            @media (max-width: 768px) {
+                .experience-body .card {
+                    flex: 1 1 calc(33.333% - 20px); /* 3 cards on tablets */
+                }
+            }
+
+            @media (max-width: 576px) {
+                .experience-body .card {
+                    flex: 1 1 calc(50% - 20px); /* 2 cards on mobile */
+                }
+            }
+
+            @media (max-width: 400px) {
+                .experience-body .card {
+                    flex: 1 1 100%; /* 1 card on very small screens */
+                }
+            }
+        @keyframes urane-loader-aim {
+            0% {
+                height: 2px;
+                margin-top: 0;
+                transform: rotate(0deg);
+            }
+
+            100% {
+                height: 80px;
+                transform: rotate(0deg);
+            }
+        }
+
+         </style>
         <div class="experience-body">
             <div class="container">
-        <div class="title">
-             <h2>Our Knowledge</h2>
-        </div>
-         <div class="card-container">
-            <div class="card">
-                <i class="fab fa-php"></i>
-                <h3>PHP</h3>
-                <p>Content for card 1</p>
-            </div>
-            <div class="card">
-                <i class="fab fa-laravel"></i>
-                <h3>laravel</h3>
-                <p>Content for card 2</p>
-            </div>
-            <div class="card">
-                <i class="fab fa-python"></i>
-                <h3>Python</h3>
-                <p>Content for card 3</p>
-            </div>
-            <div class="card">
-                <i class="fab fa-node"></i>
-                <h3>Node JS</h3>
-                <p>Content for card 4</p>
-            </div>
-            <div class="card">
-                <i class="fab fa-js"></i>
-                <h3>javascript</h3>
-                <p>Content for card 5</p>
-            </div>
-            <div class="card">
-                <i class="fab fa-vuejs"></i>
-                <h3>Vue JS</h3>
-                <p>Content for card 5</p>
-            </div>
-            <div class="card">
-                <i class="fab fa-react"></i>
-                <h3>React</h3>
-                <p>Content for card 5</p>
-            </div>
-            <div class="card">
-                <i class="fab fa-github-square"></i>
-                <h3>Github</h3>
-                <p>Content for card 5</p>
-            </div>
-            </div>
+                <div class="title">
+                    <h2>Our Knowledge</h2>
+                </div>
+
+                <div class="card-container">
+                    <div class="card">
+                        <i class="fab fa-php"></i>
+                    </div>
+                    <div style="margin-top: 100px;" class="card">
+                        <i class="fab fa-laravel"></i>
+                    </div>
+                    <div class="card">
+                        <i class="fab fa-python"></i>
+                    </div>
+                    <div style="margin-top: 100px;" class="card">
+                        <i class="fab fa-node"></i>
+                    </div>
+                    <div class="card">
+                        <i class="fab fa-js"></i>
+                    </div>
+                    <div style="margin-top: 100px;" class="card">
+                        <i class="fab fa-vuejs"></i>
+                    </div>
+                    <div class="card">
+                        <i class="fab fa-react"></i>
+                    </div>
+                </div>
             </div>
         </div>
     
