--- a/index.html
+++ b/index.html
@@ -310,13 +310,13 @@
                             <div class="accordion-single">
                                 <h2 class="accordion-header" id="headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        Web Designm & Development
+                                        Web Design & Development
                                     </button>
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
                                         <p>
-                                            Bennings appetite disposed me subjects an. To no indulgence diminution so discovered mr apartments. Are off under folly death wrote cause.
+                                            We design and develop responsive, user-friendly websites that combine visual appeal with functionality to enhance your online presence.
                                         </p>
                                     </div>
                                 </div>
@@ -330,7 +330,7 @@
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
                                         <p>
-                                            Cennings appetite disposed me subjects an. To no indulgence diminution so discovered mr apartments. Are off under folly death wrote cause.
+                                            We create custom mobile applications for iOS and Android that are intuitive, high-performing, and tailored to your business goals.
                                         </p>
                                     </div>
                                 </div>
@@ -344,7 +344,7 @@
                                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
                                         <p>
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, repellendus debitis. Rerum recusandae labore dolore velit aspernatur quasi, eaque modi necessitatibus tempore aut! A inventore recusandae provident qui obcaecati illo?
+                                            We build tailored software solutions designed to meet your unique business requirements, streamline operations, and drive growth.
                                         </p>
                                     </div>
                                 </div>
@@ -369,7 +369,7 @@
                      <!-- Single Item -->
                      <div class="col-lg-8 mb-30 mb-xs-50 mb-md-50">
                         <h4 class="sub-title">Our Services</h4>
-                        <h2 class="title split-text">Techincal solutions that revolutionize your business.</h2>
+                        <h2 class="title split-text">Engineering Digital Solutions for Business Evolution.</h2>
                         <a class="btn btn-theme btn-md radius animation wow fadeInUp" href="services.html">View all services</a>
                     </div>
                     <!-- Single Item -->
