--- a/contact-us.html
+++ b/contact-us.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tekni - IT Solutions & Services Template">
+    <meta name="description" content="Solid Thinkers - Innovation Starts Here">
 
     <!-- ========== Page Title ========== -->
-    <title>Tekni - IT Solutions & Services Template</title>
+    <title>Solid Thinkers - Innovation Starts Here</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -41,16 +41,17 @@
 
     <!-- Start Header Top 
     ============================================= -->
-    <div class="top-bar-area top-bar-style-one bg-dark text-light">
+    <div class="top-bar-area top-bar-style-one text-light" style="background: var(--navy-blue);">
         <div class="container">
             <div class="row align-center">
                 <div class="col-xl-6 col-lg-8 offset-xl-3 pl-30 pl-md-15 pl-xs-15">
                     <ul class="item-flex">
                         <li>
-                            <i class="fas fa-map-marker-alt"></i> 70240 Avenue of the Moon, California
+                            <i class="fas fa-map-marker-alt"></i> H-16, C2, Rd 13, Blk G, Niketon, Gulshan.
+
                         </li>
                         <li>
-                            <a href="tel:+4733378901"><i class="fas fa-phone-alt"></i> +4733378901</a>
+                            <a href="tel:+8801521412241"><i class="fas fa-phone-alt"></i> +8801521412241</a>
                         </li>
                     </ul>
                 </div>
@@ -58,22 +59,22 @@
                     <div class="social">
                         <ul>
                             <li>
-                                <a href="#">
+                                <a href="https://www.facebook.com/solidthinkers">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://x.com/solid_thinkers">
                                     <i class="fab fa-twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.youtube.com/@solid.thinkers">
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.linkedin.com/company/solidthinkers">
                                     <i class="fab fa-linkedin-in"></i>
                                 </a>
                             </li>
@@ -88,7 +89,7 @@
     <!-- Header 
     ============================================= -->
     <header>
-        <!-- Start Navigation -->
+          <!-- Start Navigation -->
         <nav class="navbar mobile-sidenav navbar-style-one navbar-sticky navbar-default validnavs white navbar-fixed no-background">
 
             <div class="container">
@@ -117,21 +118,25 @@
                             </button>
                             
                             <ul class="nav navbar-nav navbar-center" data-in="fadeInDown" data-out="fadeOutUp">
-                             <li><a href="index.html">Home</a></li>
-                               <li><a href="about-us.html">About</a></li>
+                             <li><a href="index.html">Home</a></li> 
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Services</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="services.html">Web Designm & Development</a></li>
-                                        <li><a href="services-2.html">Mobile App Development</a></li>
-                                       <li><a href="services-3.html">ERP Software Development</a></li>
-                                        <li><a href="#">Custom Software Development</a></li>
-                                        <li><a href="services-4.html">UI/UX Design</a></li>
+                                        <li><a href="web-design-development.html">Web Designm & Development</a></li>
+                                        <li><a href="mobile-app-development.html">Mobile App Development</a></li>
+                                        <li><a href="erp-software-development.html">ERP Software Development</a></li>
+                                        <li><a href="custom-software-development.html">Custom Software Development</a></li>
+                                        <li><a href="ui-ux-design.html">UI/UX Design</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="expertise.html">Expertise</a></li>
                                 <li><a href="projects.html">Projects</a></li>
-                                <li><a href="contact-us.html">Contact Us</a></li>
+                                <li class="dropdown">
+                                    <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown"> About Us</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="contact-us.html">Contact Us</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -207,7 +212,7 @@
                                 </div>
                                 <div class="content">
                                     <h5 class="title">Hotline</h5>
-                                    <a href="">+4733378901</a>
+                                    <a href="">+8801521412241</a>
                                 </div>
                             </li>
                             <li class="wow fadeInUp" data-wow-delay="300ms">
@@ -217,7 +222,7 @@
                                 <div class="info">
                                     <h5 class="title">Our Location</h5>
                                     <p>
-                                        55 Main Street, The Grand Avenue 2nd Block, <br> New York City
+                                        House #16, Apt C2, Road #13, Block G, Niketon, <br> Gulshan, Dhaka 1212, Bangladesh
                                     </p>
                                 </div>
                             </li>
@@ -227,7 +232,7 @@
                                 </div>
                                 <div class="info">
                                     <h5 class="title">Official Email</h5>
-                                    <a href="mailto:info@agrul.com.com">info@agrul.com</a>
+                                    <a href="mailto:hellosolidthinkers@gmail.com">hellosolidthinkers@gmail.com</a>
                                 </div>
                             </li>
                         </ul>
@@ -294,7 +299,7 @@
     ============================================= -->
     <div class="maps-area bg-gray overflow-hidden">
         <div class="google-maps">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48388.929990966964!2d-74.00332!3d40.711233!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1653598669477!5m2!1sen!2sus"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d658.9690179841887!2d90.40666423834094!3d23.772495268842366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c77a37f9969f%3A0xba129d7346c2d748!2sSuite%20E2%2C%2016%20Road%20No%2013%2C%20Dhaka%201212!5e0!3m2!1sen!2sbd!4v1748889569279!5m2!1sen!2sbd"></iframe>
         </div>
     </div>
     <!-- End Map -->
@@ -315,20 +320,20 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 footer-item pr-50 pr-xs-15">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/web-logo.jpg" alt="Logo">
+                          <h4 class="widget-title">Solid Thinkers</h4>
                             <p>
-                                Excellence decisively nay man twins impression maximum contrasted remarkably is perfect.
+                                Solid Thinkers is a software development company focused on solving real business challenges with strategic, results-driven solutions. We prioritize collaboration, transparency, and aligning with client goals throughout the development process.
                             </p>
                             <div class="opening-hours">
                                 <h5>Opening Hours</h5>
                                 <ul>
                                     <li> 
-                                        <div class="working-day">Monday – Sunday:</div>
+                                        <div class="working-day">Monday – Friday:</div>
                                         <div class="marker"></div>
-                                        <div class="working-hour">2pm – 2pm</div>
+                                        <div class="working-hour">9am – 6pm</div>
                                     </li>
                                     <li>
-                                        <div class="working-day">Sunday:</div>
+                                        <div class="working-day">Saturday - Sunday:</div>
                                         <div class="marker"></div>
                                         <div class="working-hour">Off Day</div>
                                     </li>
@@ -344,13 +349,13 @@
                                     <a href="about-us.html">Compnay Profile</a>
                                 </li>
                                 <li>
-                                    <a href="faq.html">Help Center</a>
+                                    <a href="projects.html">Projects</a>
+                                </li>
+                                <li>
+                                    <a href="expertise.html">Our Expertise</a>
                                 </li>
                                 <li>
                                     <a href="about-us.html">Career</a>
-                                </li>
-                                <li>
-                                    <a href="pricing.html">Plans & Pricing</a>
                                 </li>
                                 <li>
                                     <a href="contact-us.html">Contact</a>
@@ -358,29 +363,20 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-6 footer-item">
+                    <div class="col-lg-3 col-md-6 footer-item">
                         <div class="f-item link">
                             <h4 class="widget-title">Our Services</h4>
+                                       
                             <ul>
-                                <li>
-                                    <a href="services-details.html">IT Management</a>
-                                </li>
-                                <li>
-                                    <a href="services-details.html">Cyber Security</a>
-                                </li>
-                                <li>
-                                    <a href="services-details.html">Cloud Computing</a>
-                                </li>
-                                <li>
-                                    <a href="services-details.html">IT Consulting</a>
-                                </li>
-                                <li>
-                                    <a href="services-details.html">Backup & Recovery</a>
-                                </li>
+                                <li><a href="web-design-development.html">Web Designm & Development</a></li>
+                                <li><a href="mobile-app-development.html">Mobile App Development</a></li>
+                                <li><a href="erp-software-development.html">ERP Software Development</a></li>
+                                <li><a href="custom-software-development.html">Custom Software Development</a></li>
+                                <li><a href="ui-ux-design.html">UI/UX Design</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 footer-item">
+                    <div class="col-lg-3 col-md-6 footer-item">
                         <h4 class="widget-title">Newsletter</h4>
                         <p>
                             Join our subscribers list to get the latest <br> news and special offers.
@@ -397,22 +393,22 @@
                         </div>
                         <ul class="footer-social">
                             <li>
-                                <a href="#">
+                                <a href="https://www.facebook.com/solidthinkers">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://x.com/solid_thinkers">
                                     <i class="fab fa-twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.youtube.com/@solid.thinkers">
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.linkedin.com/company/solidthinkers">
                                     <i class="fab fa-linkedin-in"></i>
                                 </a>
                             </li>
@@ -427,9 +423,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>&copy; Copyright 2025. All Rights Reserved by <a href="#">validthemes</a></p>
+                        <p>&copy; Copyright 2025. All Rights Reserved by <a href="https://www.solidthinkers.com">Solid Thinkers</a></p>
                     </div>
-                    <div class="col-lg-6 text-end">
+                    <!-- <div class="col-lg-6 text-end">
                         <ul>
                             <li>
                                 <a href="about-us.html">Terms</a>
@@ -441,7 +437,7 @@
                                 <a href="contact-us.html">Support</a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
