--- a/contact-us.html
+++ b/contact-us.html
@@ -122,7 +122,7 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Services</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="web-design-development.html">Web Designm & Development</a></li>
+                                        <li><a href="web-design-development.html">Web Design & Development</a></li>
                                         <li><a href="mobile-app-development.html">Mobile App Development</a></li>
                                         <li><a href="erp-software-development.html">ERP Software Development</a></li>
                                         <li><a href="custom-software-development.html">Custom Software Development</a></li>
@@ -368,7 +368,7 @@
                             <h4 class="widget-title">Our Services</h4>
                                        
                             <ul>
-                                <li><a href="web-design-development.html">Web Designm & Development</a></li>
+                                <li><a href="web-design-development.html">Web Design & Development</a></li>
                                 <li><a href="mobile-app-development.html">Mobile App Development</a></li>
                                 <li><a href="erp-software-development.html">ERP Software Development</a></li>
                                 <li><a href="custom-software-development.html">Custom Software Development</a></li>
