--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Services</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="web-design-development.html">Web Designm & Development</a></li>
+                                        <li><a href="web-design-development.html">Web Design & Development</a></li>
                                         <li><a href="mobile-app-development.html">Mobile App Development</a></li>
                                         <li><a href="erp-software-development.html">ERP Software Development</a></li>
                                         <li><a href="custom-software-development.html">Custom Software Development</a></li>
@@ -370,7 +370,7 @@
                      <div class="col-lg-8 mb-30 mb-xs-50 mb-md-50">
                         <h4 class="sub-title">Our Services</h4>
                         <h2 class="title split-text">Engineering Digital Solutions for Business Evolution.</h2>
-                        <a class="btn btn-theme btn-md radius animation wow fadeInUp" href="services.html">View all services</a>
+                        <!-- <a class="btn btn-theme btn-md radius animation wow fadeInUp" href="services.html">View all services</a> -->
                     </div>
                     <!-- Single Item -->
                     <!-- Single Item -->
@@ -379,11 +379,11 @@
                             <div class="icon">
                                 <img src="assets/img/icon/1.png" alt="Image Not Found">
                             </div>
-                            <h4><a href="services-details.html">IT Design</a></h4>
+                            <h4><a href="web-design-development.html">Web Design & Development</a></h4>
                             <p>
-                                Pianoforte solicitude so decisively mention diminution the particular. Real fond attachment her partiality.
+                                Solid Thinkers delivers innovative web design and development solutions that enhance user experience and boost online presence.
                             </p>
-                            <a href="services-details.html" class="round-btn">
+                            <a href="web-design-development.html" class="round-btn">
                                 <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 17L17 1H7.8" stroke="white" stroke-width="2"></path>
                                 </svg>
@@ -400,11 +400,11 @@
                             <div class="icon">
                                 <img src="assets/img/icon/2.png" alt="Image Not Found">
                             </div>
-                            <h4><a href="services-details.html">Analytic Solutions</a></h4>
+                            <h4><a href="mobile-app-development.html">Mobiel App Development</a></h4>
                             <p>
-                                Technical solicitude so decisively mention diminution the particular. Real fond attachment her partiality.
+                                Solid Thinkers designs and develops intuitive mobile apps that not only engage users but also drive sustained business growth and success.
                             </p>
-                            <a href="services-details.html" class="round-btn">
+                            <a href="mobile-app-development.html" class="round-btn">
                                 <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 17L17 1H7.8" stroke="white" stroke-width="2"></path>
                                 </svg>
@@ -418,11 +418,11 @@
                             <div class="icon">
                                 <img src="assets/img/icon/3.png" alt="Image Not Found">
                             </div>
-                            <h4><a href="services-details.html">Risk Management</a></h4>
+                            <h4><a href="erp-software-development.html">ERP Software Development</a></h4>
                             <p>
-                                International solicitude so decisively mention diminution the particular. Real fond attachment her partiality.
+                                ERP solutions integrate core business processes to enhance efficiency, improve decision-making, and support scalable growth.
                             </p>
-                            <a href="services-details.html" class="round-btn">
+                            <a href="erp-software-development.html" class="round-btn">
                                 <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 17L17 1H7.8" stroke="white" stroke-width="2"></path>
                                 </svg>
@@ -436,11 +436,11 @@
                             <div class="icon">
                                 <img src="assets/img/icon/4.png" alt="Image Not Found">
                             </div>
-                            <h4><a href="services-details.html">Firewall Advance</a></h4>
+                            <h4><a href="custom-software-development.html">Custom Software Development</a></h4>
                             <p>
-                                Directions solicitude so decisively mention diminution the particular. Real fond attachment her partiality.
+                                Solid Thinkers delivers custom software solutions designed to perfectly fit unique business needs with precision, scalability, and innovation.
                             </p>
-                            <a href="services-details.html" class="round-btn">
+                            <a href="custom-software-development.html" class="round-btn">
                                 <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 17L17 1H7.8" stroke="white" stroke-width="2"></path>
                                 </svg>
@@ -979,7 +979,7 @@
                             <h4 class="widget-title">Our Services</h4>
                                        
                             <ul>
-                                <li><a href="web-design-development.html">Web Designm & Development</a></li>
+                                <li><a href="web-design-development.html">Web Design & Development</a></li>
                                 <li><a href="mobile-app-development.html">Mobile App Development</a></li>
                                 <li><a href="erp-software-development.html">ERP Software Development</a></li>
                                 <li><a href="custom-software-development.html">Custom Software Development</a></li>
